# citrusagent-backend

./: .env.example  .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
docs/: BGE-M3服务部署说明.md  RAG服务资源勿删说明.txt  RAG设计开发技术文档.md  后端基本开发文档.md
knowledge_raw/: 砂糖橘溃疡病.md
scripts/: ingest_documents.py  init_mysql_tables.py
scripts/server/: bge_m3_server.py  qwen3_reranker_server.py
src/: __init__.py
src/citrus_agent/: __init__.py  main.py
src/citrus_agent/api/: __init__.py
src/citrus_agent/api/v1/: __init__.py  admin.py  auth.py  chat.py  knowledge.py  router.py  tool.py
src/citrus_agent/common/: __init__.py
src/citrus_agent/core/: __init__.py  config.py  database.py  settings.py
src/citrus_agent/db/: __init__.py  db_models.py  models.py  session.py
src/citrus_agent/llm/: README.md  __init__.py  base.py  intent_router.py
src/citrus_agent/pojo/: __init__.py  db_models.py  knowledge.py
src/citrus_agent/rag/: RAGREADME.md  __init__.py  rag_api.py  reranker.py  retriever.py
src/citrus_agent/services/: __init__.py  auth_service.py  chat_service.py  document_parser.py  knowledge_service.py  logger.py  rag_bridge.py  rag_service.py  sql_service.py  tool_service.py
src/citrus_agent/tools/: fertilizer_calculator.py
src/citrus_agent/vectorstores/: __init__.py  embeddings.py  qdrant.py
tests/: README.md  test.py  test_document_parser.py  test_knowledge_service.py  test_qdrant_store.py  test_rag_api.py  test_retriever.py
