[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citrus-agent"
version = "0.1.0"
description = "Agriculture RAG backend with FastAPI, LangChain, and Qdrant."
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "python-dotenv==1.2.2",
    "langchain==1.3.1",
    "langchain-community==0.4.2",
    "langchain-openai==1.2.2",
    "openai==2.26.0",
    "qdrant-client==1.18.0",
    "SQLAlchemy==2.0.50",
    "PyMySQL==1.1.2",
    "sentence-transformers==5.1.2",
    "pypdf==6.4.1",
    "python-docx==1.2.0",
    "openpyxl==3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "httpx==0.28.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
